added sound, and animation

--- a/sos.css
+++ b/sos.css
@@ -33,7 +33,8 @@ body {
     background-size: 40%;
     position: absolute;
     margin-left: 60%;
-    margin-top: 17%
+    margin-top: 17%;
+    z-index: 2;
 }
 
 #kanin {
@@ -173,5 +174,67 @@ body {
 
     100% {
         bottom: 30%;
+    }
+}
+
+/************* Fugl med skilt ****************/
+
+#fugl {
+    background-image: url(img/fugl.svg);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    width: 20.31vw;
+    height: 20.33vw;
+    position: absolute;
+    top: 10%;
+    right: 0%;
+}
+
+.fugl_flyver {
+    animation-name: fugl_flyver_kf;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+    z-index: 1;
+    animation-play-state: paused;
+
+}
+
+
+@keyframes fugl_flyver_kf {
+    0% {
+        right: -30%;
+    }
+    100% {
+        right: 100%;
+    }
+}
+
+
+#eva {
+    background-image: url(img/Eva-01.svg);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    width: 40.31vw;
+    height: 40.33vw;
+    position: absolute;
+    top: 60%;
+    right: 0%;
+}
+
+.eva_sprite {
+    animation-name: eva_kf;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+    animation-play-state: paused;
+}
+
+@keyframes eva_kf {
+    0% {
+        right: -50%;
+    }
+    100% {
+        right: 10%;
     }
 }
